# long

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ast/: Cargo.toml
ast/src/: lib.rs
ast/src/node/: decl.rs  expr.rs  lit.rs  mod.rs  stmt.rs  ty.rs
ast/src/token/: kind.rs  mod.rs
include/: longcc.h
ir/: Cargo.toml
ir/src/: block.rs  decl.rs  expr.rs  inst.rs  lib.rs  name.rs  stmt.rs  value.rs
ir/src/func/: mod.rs
ir/src/ty/: mod.rs
lexer/: Cargo.toml
lexer/src/: cursor.rs  lib.rs  macros.rs  src_lexer.rs  traits.rs
lexer/src/token/: kind.rs  mod.rs
longcc/: Cargo.toml
longcc/src/: main.rs
lower/: Cargo.toml
lower/src/: lib.rs
lower/src/ast2ir/: decl.rs  env.rs  expr.rs  mod.rs  name.rs  stmt.rs  ty.rs
lower/src/ast2ir/snapshots/: long_lower__ast2ir__parse_and_lower.snap  long_lower__ast2ir__parse_and_lower.snap.new  long_lower__ast2ir__parse_and_lower_func.snap  long_lower__ast2ir__parse_and_lower_func2.snap  long_lower__ast2ir__parse_and_lower_funcs.snap  long_lower__ast2ir__parse_and_lower_simple_decl.snap  long_lower__ast2ir__parse_and_lower_simple_decl2.snap
lower/src/ir2clif/: decl.rs  expr.rs  inst.rs  mod.rs  name.rs  stmt.rs  ty.rs  value.rs
lower/src/ir2clif/snapshots/: long_lower__ir2clif__decl__arith.snap  long_lower__ir2clif__decl__arith2.snap  long_lower__ir2clif__parse_and_lower_to_clif.snap  long_lower__ir2clif__parse_and_lower_to_clif2.snap
parser/: Cargo.toml
parser/examples/: lex.rs
parser/src/: decl.rs  expr.rs  lib.rs  stmt.rs
sourceloc/: Cargo.toml
sourceloc/src/: lib.rs  source.rs
(+90 files in other folders)
